--- a/src/components/Section/StaticSections/PrimaryHero.astro
+++ b/src/components/Section/StaticSections/PrimaryHero.astro
@@ -1,11 +1,11 @@
 ---
 // src/components/StaticSections/PrimaryHero.astro
-import Section from "@/components/Section.astro";
+import Section from "@/components/Section/Section.astro";
 import HeroBg from "@/assets/Landing-Page-Background-1-scaled.jpg";
 import { SiteData } from "@/content/SiteData";
 import { Image } from "astro:assets";
-import ContactForm from "@/components/Forms/ContactForm.astro";
-import Heading from "../Heading";
+import ContactForm from "@/components/Form/Forms/ContactForm.astro";
+import Heading from '@/components/Heading';
 ---
 
 <Section
