--- a/src/pages/[collection]/index.astro
+++ b/src/pages/[collection]/index.astro
@@ -1,6 +1,6 @@
 ---
 // /[collection]/index.astro
-import Section from "@/components/Section.astro";
+import Section from "@/components/Section/Section.astro";
 import { collections } from "@/content/config";
 import { getCollectionMeta } from "@/utils/FetchMeta";
 import { capitalize } from "@/utils/ContentUtils";
