--- a/src/components/Form/Forms/PartnerForm.astro
+++ b/src/components/Form/Forms/PartnerForm.astro
@@ -1,20 +1,21 @@
 ---
-import Form from "@/components/Forms/Form.astro";
-import TextInput from "@/components/Forms/Inputs/TextInput.astro";
-import Textarea from "@/components/Forms/Inputs/Textarea.astro";
+import Form from "@/components/Form/Form.astro";
+import TextInput from "@/components/Form/Inputs/TextInput.astro";
+import Textarea from "@/components/Form/Inputs/Textarea.astro";
 import { SiteData } from "@/content/SiteData";
 import { getCurrentEntryId } from "@/utils/CurrentEntry";
 
 const {
-  inputClasses = "border border-[var(--color-border)] transition-default p-[var(--spacing-sm)] w-full bg-bg placeholder:text-[var(--color-text)] text-text outline-none",
-  wrapperClasses = "mb-[var(--spacing-sm)] w-full",
+  inputClasses = "border border-[var(--color-border)] transition-default p-[var(--spacing-sm)] w-full bg-bg placeholder:text-[var(--color-text)] text-text outline-none flex",
+  wrapperClasses = "mb-[var(--spacing-sm)] w-full flex flex-col items-center",
 } = Astro.props;
 
 // Extract current page identifier
 const currentPage = getCurrentEntryId(Astro);
+
 const formAction = (
   import.meta.env.PUBLIC_INTEGRATION_FORMSPREE +
-  import.meta.env.PUBLIC_QUOTE_FORM
+  import.meta.env.PUBLIC_PARTNER_FORM
 );
 ---
 
@@ -24,6 +25,7 @@ const formAction = (
   enableSuccessBanner={true}
   successBannerMessage="Thank you for your message. We will get in touch with you shortly."
   successBannerClass="p-[var(--spacing-sm)] bg-primary text-bg border border-[var(--color-border)] bg-light-opacity"
+  formClass="lg:w-1/2 bg-bg z-[999] p-[var(--spacing-xl)] shadow-lg hover:shadow-xl transition-shadow duration-300"
 >
   <!-- Hidden input for current page -->
   <input type="hidden" name="Page-of-Submission" value={currentPage} />
@@ -52,11 +54,36 @@ const formAction = (
     </div>
   </div>
 
+  <div class="flex flex-col lg:flex-row lg:space-x-[var(--spacing-sm)]">
+    <div class="w-full lg:w-1/2">
+      <TextInput
+        label="Company Name"
+        name="company-name"
+        type="text"
+        placeholder="Solar Industries LLC"
+        required
+        inputClass={inputClasses}
+        wrapperClass={wrapperClasses}
+      />
+    </div>
+    <div class="w-full lg:w-1/2">
+      <TextInput
+        label="Business Website"
+        name="website"
+        type="text"
+        placeholder="solar.com"
+        required
+        inputClass={inputClasses}
+        wrapperClass={wrapperClasses}
+      />
+    </div>
+  </div>
+
   <!-- Row 2 -->
   <div class="flex flex-col lg:flex-row lg:space-x-[var(--spacing-sm)]">
     <div class="w-full lg:w-1/2">
       <TextInput
-        label="Email Address"
+        label="Business Email Address"
         name="email"
         type="email"
         placeholder="you@example.com"
@@ -67,7 +94,7 @@ const formAction = (
     </div>
     <div class="w-full lg:w-1/2">
       <TextInput
-        label="Phone Number"
+        label="Business Phone Number"
         name="phone"
         type="tel"
         placeholder="123-456-7890"
@@ -89,4 +116,5 @@ const formAction = (
       wrapperClass={wrapperClasses}
     />
   </div>
+
 </Form>
