--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,9 +1,14 @@
 ---
 // src/pages/404.astro
-import Button from "@/components/Button.jsx";
+import Button from "@/components/Button/Button.jsx";
 import BaseLayout from "@/layouts/BaseLayout.astro";
 ---
-<BaseLayout title="Page Not Found" description="The page you requested does not exist." robots="noindex, nofollow">
+
+<BaseLayout
+  title="Page Not Found"
+  description="The page you requested does not exist."
+  robots="noindex, nofollow"
+>
   <p class="p-[var(--spacing-md)] text-[var(--color-text)]">
     You've found the wrong place.
   </p>
