--- a/src/pages/[collection]/[slug].astro
+++ b/src/pages/[collection]/[slug].astro
@@ -3,7 +3,7 @@
 import { getCollection } from "astro:content";
 import { Image } from "astro:assets";
 import Heading from "@/components/Heading.jsx";
-import Section from "@/components/Section.astro";
+import Section from "@/components/Section/Section.astro";
 import { collections } from "@/content/config";
 import { getCollectionMeta } from "@/utils/FetchMeta";
 import { getCanonicalSlug } from "@/utils/ContentUtils";
