new folder structure

--- a/src/layouts/PageLayouts/Partners.astro
+++ b/src/layouts/PageLayouts/Partners.astro
@@ -1,7 +1,7 @@
 ---
 // src/layouts/ExtendedLayout.astro
 import SecondaryHero from "@/components/Section/StaticSections/SecondaryHero.astro";
-import BaseLayout from "./BaseLayout.astro";
+import BaseLayout from "../BaseLayout.astro";
 import Section from "@/components/Section/Section.astro";
 import PartnerForm from "@/components/Form/Forms/PartnerForm.astro";
 import { SiteData } from "@/content/SiteData";
