--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -55,7 +55,7 @@ const breakpoint = "lg";
             component: MenuItem,
             class: "submenu-class bg-bg z-[999999]",
           },
-          listClass: "flex gap-[var(--spacing-md)] uppercase font-light",
+          listClass: "flex gap-[var(--spacing-md)] uppercase font-medium",
         }}
         hamburgerMenu={{
           hamburgerIconClass: "custom-hamburger-icon text-primary",
