--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -25,7 +25,7 @@ const FooterMenu = [
     />
   </a>
   <p class="text-[var(--font-size-sm)] m-0 p-0">
-    &copy; {new Date().getFullYear()} Cleanomatic. All rights reserved.
+    &copy; {new Date().getFullYear()} {SiteData.title}. All rights reserved.
   </p>
   <!-- <Menu items={await buildMenuQueries({ FooterMenu })} /> -->
 </div>
