--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,7 @@
 // src/layouts/BaseLayout.astro
 import SEO from '@/layouts/SEO.astro';
 import Theme from '@/layouts/Theme.astro';
+import Marketing from '@/layouts/Marketing.astro';
 import Header from '@/components/Header.astro';
 import Footer from '@/components/Footer.astro';
 import { SiteData } from '@/content/SiteData';
@@ -38,13 +39,13 @@ resetSectionIds();
   <slot name="head" />
 </head>
 <body class="m-0 p-0 w-full h-full overflow-x-hidden">
+      <Marketing />
   <AnimationLayout>
     <Header />
     <main class="min-h-[80vh] bg-[var(--color-bg)] text-[var(--color-text)]">
       <slot />
     </main>
     <Footer />
-    <!-- <Marketing /> -->
   </AnimationLayout>
 </body>
 </html>
