--- a/src/layouts/Marketing.astro
+++ b/src/layouts/Marketing.astro
@@ -2,3 +2,7 @@
 // src/layouts/Marketing.astro
 ---
   <!-- Marketing Tags such as GA, FB Pixel, etc -->
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TFCXPM4R"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
