--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,7 +2,8 @@
 // src/layouts/BaseLayout.astro
 import SEO from '@/layouts/SEO.astro';
 import Theme from '@/layouts/Theme.astro';
-import HeadTag from '@/layouts/Head.astro';
+import HeadTags from '@/layouts/HeadTags.astro';
+import BodyTags from '@/layouts/BodyTags.astro';
 import Header from '@/components/Header.astro';
 import Footer from '@/components/Footer.astro';
 import { SiteData } from '@/content/SiteData';
@@ -25,7 +26,7 @@ resetSectionIds();
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <HeadTag />
+  <HeadTags />
   <SEO
     title={title}
     description={description}
@@ -40,11 +41,7 @@ resetSectionIds();
   <slot name="head" />
 </head>
 <body class="m-0 p-0 w-full h-full overflow-x-hidden">
-    <!-- Marketing Tags such as GA, FB Pixel, etc -->
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TFCXPM4R"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+   <BodyTags />
   <AnimationLayout>
     <Header />
     <main class="min-h-[80vh] bg-[var(--color-bg)] text-[var(--color-text)]">
