--- a/src/layouts/BodyTags.astro
+++ b/src/layouts/BodyTags.astro
@@ -1,7 +1,7 @@
 ---
 // BodyTags.astro
 const GTM_ID = import.meta.env.PUBLIC_INTEGRATION_GTM
-console.log("GTM ID:", GTM_ID);
+// console.log("GTM ID:", GTM_ID);
 ---
 <!-- Google Tag Manager (noscript) -->  
 {GTM_ID && (  
