--- a/src/layouts/HeadTags.astro
+++ b/src/layouts/HeadTags.astro
@@ -1,20 +1,12 @@
 ---
 // src/layouts/Head.astro
-const GTM_ID = import.meta.env.PUBLIC_INTEGRATION_GTM;
+const GTM_ID = import.meta.env.PUBLIC_INTEGRATION_GTM
 console.log("GTM ID:", GTM_ID);
 ---
-{GTM_ID && (
-  <!-- this <script> will render _exactly_ the JS you write, no escaping -->
-  <script
-    set:html={`(function(w,d,s,l,i){
-      w[l]=w[l]||[];
-      w[l].push({'gtm.start': new Date().getTime(), event:'gtm.js'});
-      var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != 'dataLayer' ? '&l=' + l : '';
-      j.async = true;
-      j.src = 'https://www.googletagmanager.com/gtm.js?id='+ i + dl;
-      f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','${GTM_ID}');`}
-  />
-)}
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer',`GTM-TFCXPM4R`);</script>
+<!-- End Google Tag Manager -->
