--- a/src/layouts/HeadTags.astro
+++ b/src/layouts/HeadTags.astro
@@ -1,12 +1,12 @@
 ---
-// src/layouts/Head.astro
 const GTM_ID = import.meta.env.PUBLIC_INTEGRATION_GTM;
-const gtmSnippet = `(function(w,d,s,l,i){
+// build a raw JS string containing a single‐quoted ID
+const loader = `(function(w,d,s,l,i){
   w[l]=w[l]||[];
   w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});
   var f=d.getElementsByTagName(s)[0],
       j=d.createElement(s),
-      dl=l!='dataLayer'? '&l='+l : '';
+      dl=l!='dataLayer'?'&l='+l:'';
   j.async=true;
   j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;
   f.parentNode.insertBefore(j,f);
@@ -15,9 +15,7 @@ const gtmSnippet = `(function(w,d,s,l,i){
 {GTM_ID && (
   <>
     <!-- Google Tag Manager -->
-    <script is:inline>
-      {gtmSnippet}
-    </script>
+    <script innerHTML={loader}></script>
     <!-- End Google Tag Manager -->
   </>
 )}
