--- a/src/layouts/HeadTags.astro
+++ b/src/layouts/HeadTags.astro
@@ -14,8 +14,8 @@ const loader = `(function(w,d,s,l,i){
 ---
 {GTM_ID && (
   <>
-    <!-- Google Tag Manager -->
+    {/* <!-- Google Tag Manager --> */}
     <script innerHTML={loader}></script>
-    <!-- End Google Tag Manager -->
+    {/* <!-- End Google Tag Manager --> */}
   </>
 )}
