--- a/src/layouts/HeadTags.astro
+++ b/src/layouts/HeadTags.astro
@@ -1,21 +1,24 @@
 ---
+// src/layouts/Head.astro
 const GTM_ID = import.meta.env.PUBLIC_INTEGRATION_GTM;
-// build a raw JS string containing a single‐quoted ID
-const loader = `(function(w,d,s,l,i){
-  w[l]=w[l]||[];
-  w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});
-  var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),
-      dl=l!='dataLayer'?'&l='+l:'';
-  j.async=true;
-  j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;
-  f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','${GTM_ID}');`;
 ---
 {GTM_ID && (
   <>
     {/* <!-- Google Tag Manager --> */}
-    <script innerHTML={loader}></script>
+    <script define:vars={{ GTM_ID }}>
+        {console.log("GTM ID:", GTM_ID)
+      (function(w,d,s,l,i){
+        w[l]=w[l]||[];
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+        var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),
+            dl=l!='dataLayer'?'&l='+l:'';
+        j.async=true;
+        j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;
+        f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer',GTM_ID);
+    }
+    </script>
     {/* <!-- End Google Tag Manager --> */}
   </>
 )}
