--- a/src/layouts/HeadTags.astro
+++ b/src/layouts/HeadTags.astro
@@ -1,23 +1,10 @@
 ---
 // src/layouts/Head.astro
 ---
-<!-- Forward dataLayer.push before Partytown loads -->
-<script>
-  window.partytown = { forward: ['dataLayer.push'] };
-</script>
-
-<!-- Partytown: Initialize dataLayer in web worker -->
-<script type="text/partytown">
-  window.dataLayer = window.dataLayer || [];
-  window.dataLayer.push({
-    'gtm.start': new Date().getTime(),
-    event: 'gtm.js'
-  });
-</script>
-
-<!-- Partytown: Load GTM off the main thread -->
-<script
-  type="text/partytown"
-  async
-  src="https://www.googletagmanager.com/gtm.js?id=GTM-TFCXPM4R&l=dataLayer"
-></script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer',`GTM-TFCXPM4R`);</script>
+<!-- End Google Tag Manager -->
