--- a/src/layouts/HeadTags.astro
+++ b/src/layouts/HeadTags.astro
@@ -1,10 +1,22 @@
----
-// src/layouts/HeadTags.astro
----
-<!-- Google Tag Manager -->
-<script client:idle>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer',`GTM-TFCXPM4R`);</script>
-<!-- End Google Tag Manager -->
+<script>
+  // 1) Minimal dataLayer bootstrap
+  window.dataLayer = window.dataLayer || [];
+  window.dataLayer.push({
+    'gtm.start': Date.now(),
+    event: 'gtm.js'
+  });
+
+  // 2) Schedule GTM load during idle time
+  function loadGTM() {
+    var s = document.createElement('script');
+    s.async = true;
+    s.src   = 'https://www.googletagmanager.com/gtm.js?id=GTM-TFCXPM4R&l=dataLayer';
+    document.head.appendChild(s);
+  }
+
+  if ('requestIdleCallback' in window) {
+    requestIdleCallback(loadGTM);
+  } else {
+    window.addEventListener('load', loadGTM);
+  }
+</script>
