--- a/src/layouts/HeadTags.astro
+++ b/src/layouts/HeadTags.astro
@@ -1,22 +1,9 @@
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-46Y6QBLZP1"></script>
 <script>
-  // 1) Minimal dataLayer bootstrap
   window.dataLayer = window.dataLayer || [];
-  window.dataLayer.push({
-    'gtm.start': Date.now(),
-    event: 'gtm.js'
-  });
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-  // 2) Schedule GTM load during idle time
-  function loadGTM() {
-    var s = document.createElement('script');
-    s.async = true;
-    s.src   = 'https://www.googletagmanager.com/gtm.js?id=GTM-TFCXPM4R&l=dataLayer';
-    document.head.appendChild(s);
-  }
-
-  if ('requestIdleCallback' in window) {
-    requestIdleCallback(loadGTM);
-  } else {
-    window.addEventListener('load', loadGTM);
-  }
+  gtag('config', 'G-46Y6QBLZP1');
 </script>
