--- a/src/layouts/HeadTags.astro
+++ b/src/layouts/HeadTags.astro
@@ -1,5 +1,5 @@
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-46Y6QBLZP1"></script>
+<script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-46Y6QBLZP1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
