--- a/src/layouts/HeadTags.astro
+++ b/src/layouts/HeadTags.astro
@@ -1,6 +1,6 @@
 <!-- Google tag (gtag.js) -->
 <script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-46Y6QBLZP1"></script>
-<script>
+<script type="text/partytown">
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
